[package]
name = "portiq"
version = "0.2.0"
description = "PortIQ is an HTTP(S) API gateway written in Rust, built using hyper, reqwest, rustls, and tokio"
edition = "2024"
license = "MIT"

[dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["http1", "http2"] }
hyper-util = { version = "0.1.19", features = ["server-auto", "tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
uuid = { version = "1.20.0", features = ["v4"] }
rustls-pki-types = "1.14.0"
rustls = "0.23.36"
tokio-rustls = "0.26.4"
async-trait = "0.1.89"
reqwest = "0.13.1"
config = { version = "0.15.19", default-features = false, features = ["yaml"] }
thiserror = "2.0.18"
humantime-serde = "1.1.1"
tokio-util = "0.7.18"
tracing-appender = "0.2.4"
axum = "0.8.8"
arc-swap = "1.8.0"

[profile.release]
codegen-units = 1
lto = true
